--- a/src/lk/sliit/itpmProject/view/ManageLecturers.fxml
+++ b/src/lk/sliit/itpmProject/view/ManageLecturers.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -19,24 +19,28 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <TableView layoutX="313.0" layoutY="161.0" prefHeight="240.0" prefWidth="426.0">
+      <TableView fx:id="tblLecturer" layoutX="313.0" layoutY="161.0" prefHeight="248.0" prefWidth="705.0">
         <columns>
           <TableColumn prefWidth="75.0" text="ID" />
           <TableColumn prefWidth="75.0" text="Name" />
             <TableColumn prefWidth="83.0" text="EMP.ID" />
             <TableColumn prefWidth="86.0" text="Faculty " />
             <TableColumn prefWidth="87.0" text="Level" />
+            <TableColumn prefWidth="75.0" text="Department" />
+            <TableColumn prefWidth="75.0" text="Center" />
+            <TableColumn prefWidth="75.0" text="Building" />
+            <TableColumn prefWidth="75.0" text="Rank" />
         </columns>
       </TableView>
-      <Button id="MLUpdate" layoutX="783.0" layoutY="173.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #064E98;" text="Update" textFill="WHITE">
+      <Button id="MLUpdate" fx:id="btnUpdate" layoutX="1118.0" layoutY="169.0" mnemonicParsing="false" onAction="#btnOnAction_Update" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #064E98;" text="Update" textFill="WHITE">
          <font>
             <Font name="System Bold" size="17.0" />
          </font></Button>
-      <Button id="MLDelete" layoutX="785.0" layoutY="232.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #980606;" text="Delete" textFill="WHITE">
+      <Button id="MLDelete" fx:id="btnDelete" layoutX="1118.0" layoutY="231.0" mnemonicParsing="false" onAction="#btnOnAction_Delete" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #980606;" text="Delete" textFill="WHITE">
          <font>
             <Font name="System Bold" size="17.0" />
          </font></Button>
-      <Button id="MLClear" layoutX="785.0" layoutY="292.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #649292;" text="Clear" textFill="WHITE">
+      <Button id="MLClear" fx:id="btnClear" layoutX="1118.0" layoutY="287.0" mnemonicParsing="false" onAction="#btnOnAction_Clear" prefHeight="37.0" prefWidth="149.0" style="-fx-background-color: #649292;" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="17.0" />
          </font></Button>
@@ -80,14 +84,9 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <TextField id="MLLecturername" layoutX="473.0" layoutY="475.0" />
-      <TextField id="MLEmpID" layoutX="473.0" layoutY="546.0" />
-      <ChoiceBox id="MLFaculty" layoutX="473.0" layoutY="617.0" prefHeight="31.0" prefWidth="187.0" />
-      <ChoiceBox id="MLDepartment" layoutX="473.0" layoutY="689.0" prefHeight="31.0" prefWidth="187.0" />
-      <ChoiceBox id="MLCenter" layoutX="857.0" layoutY="475.0" prefHeight="31.0" prefWidth="187.0" />
-      <ChoiceBox id="MLBuilding" layoutX="859.0" layoutY="546.0" prefHeight="31.0" prefWidth="187.0" />
-      <ChoiceBox id="MLLevel" layoutX="859.0" layoutY="611.0" prefHeight="31.0" prefWidth="187.0" />
-      <TextField id="MLRank" layoutX="857.0" layoutY="684.0" /> <ImageView fitHeight="109.0" fitWidth="125.0" layoutX="82.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
+      <TextField id="MLLecturername" fx:id="txtLname" layoutX="473.0" layoutY="475.0" prefHeight="31.0" prefWidth="187.0" />
+      <TextField id="MLEmpID" fx:id="txtLemid" layoutX="473.0" layoutY="546.0" prefHeight="31.0" prefWidth="187.0" />
+      <TextField id="MLRank" fx:id="txtRank" layoutX="885.0" layoutY="684.0" prefHeight="31.0" prefWidth="187.0" /> <ImageView fitHeight="109.0" fitWidth="125.0" layoutX="82.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@../assert/home-icon.png" />
       </image></ImageView>
@@ -109,5 +108,10 @@
          <image>
             <Image url="@../assert/google-maps-location-icon-14.jpg" />
          </image>
-      </ImageView>   </children>
+      </ImageView>
+      <JFXComboBox fx:id="cmbFaculty" layoutX="473.0" layoutY="611.0" prefHeight="31.0" prefWidth="187.0" />
+      <JFXComboBox fx:id="cmbDepartment" layoutX="473.0" layoutY="684.0" prefHeight="31.0" prefWidth="187.0" />
+      <JFXComboBox fx:id="cmbCenter" layoutX="884.0" layoutY="473.0" prefHeight="31.0" prefWidth="187.0" />
+      <JFXComboBox fx:id="cmbBuilding" layoutX="885.0" layoutY="546.0" prefHeight="31.0" prefWidth="187.0" />
+      <JFXComboBox fx:id="cmbLevel" layoutX="885.0" layoutY="615.0" prefHeight="31.0" prefWidth="187.0" />   </children>
 </AnchorPane>
