--- a/src/lk/sliit/itpmProject/view/Managesessions.fxml
+++ b/src/lk/sliit/itpmProject/view/Managesessions.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -79,6 +80,15 @@
                <Image url="@../assert/google-maps-location-icon-14.jpg" />
            </image>
        </ImageView>
-      <Button layoutX="754.0" layoutY="120.0" mnemonicParsing="false" onAction="#btnSearchOnAction" prefHeight="39.0" prefWidth="159.0" text="Search" />
+      <Button layoutX="754.0" layoutY="120.0" mnemonicParsing="false" onAction="#btnSearchOnAction" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: green;" text="Search" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Button>
+      <Label layoutX="479.0" layoutY="100.0" text="category">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
