--- a/src/lk/sliit/itpmProject/view/ManageSessionRooms.fxml
+++ b/src/lk/sliit/itpmProject/view/ManageSessionRooms.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
@@ -20,20 +21,20 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <Text layoutX="286.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+      <Text layoutX="292.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Tag">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
 
-      <Text layoutX="286.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Session">
+      <Text layoutX="283.0" layoutY="632.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Session">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <TextArea id="selecteds" layoutX="520.0" layoutY="436.0" prefHeight="81.0" prefWidth="422.0" />
-      <Button id="sub" layoutX="528.0" layoutY="545.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="109.0" style="-fx-background-color: #064E98;" text="Submit" />
-      <Button id="lea" layoutX="704.0" layoutY="545.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="109.0" style="-fx-background-color: #980606;" text="Clear" />
+      <TextArea id="selecteds" layoutX="523.0" layoutY="584.0" prefHeight="81.0" prefWidth="422.0" />
+      <Button id="sub" layoutX="520.0" layoutY="714.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="109.0" style="-fx-background-color: #064E98;" text="Submit" />
+      <Button id="lea" layoutX="710.0" layoutY="714.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="109.0" style="-fx-background-color: #980606;" text="Clear" />
       <ImageView fx:id="iconHome" fitHeight="109.0" fitWidth="125.0" layoutX="77.0" layoutY="139.0" onMouseClicked="#navigate" onMouseEntered="#playMouseEnterAnimation" onMouseExited="#playMouseExitAnimatio" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assert/home-icon.png" />
@@ -57,5 +58,55 @@
             <Image url="@../assert/google-maps-location-icon-14.jpg" />
          </image>
       </ImageView>
+      <JFXComboBox layoutX="545.0" layoutY="222.0" prefHeight="31.0" prefWidth="193.0" />
+      <JFXComboBox layoutX="541.0" layoutY="285.0" prefHeight="0.0" prefWidth="193.0" />
+      <JFXComboBox layoutX="1073.0" layoutY="221.0" prefHeight="31.0" prefWidth="184.0" />
+      <JFXComboBox layoutX="1073.0" layoutY="285.0" prefHeight="31.0" prefWidth="184.0" />
+      <JFXComboBox layoutX="545.0" layoutY="353.0" prefHeight="31.0" prefWidth="193.0" />
+      <Text layoutX="887.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text layoutX="887.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text layoutX="292.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Lecturer">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text layoutX="887.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <JFXComboBox layoutX="1073.0" layoutY="353.0" prefHeight="31.0" prefWidth="184.0" />
+      <Text layoutX="291.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Group">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <JFXComboBox layoutX="545.0" layoutY="418.0" prefHeight="31.0" prefWidth="193.0" />
+      <Text layoutX="890.0" layoutY="441.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <JFXComboBox layoutX="1073.0" layoutY="419.0" prefHeight="31.0" prefWidth="184.0" />
+      <Text layoutX="291.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Subject">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <JFXComboBox layoutX="545.0" layoutY="486.0" prefHeight="31.0" prefWidth="193.0" />
+      <Text layoutX="897.0" layoutY="509.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Room">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <JFXComboBox layoutX="1082.0" layoutY="486.0" prefHeight="31.0" prefWidth="184.0" />
    </children>
 </AnchorPane>
